plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wepong'
version = '0.0.1'
description = 'PongDang project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// JavaMailSender
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	// REST API
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// Restart
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	// MariaDB
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	// MySQLDB
	implementation 'com.mysql:mysql-connector-j'
	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// AWS S3
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.681'
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	// Google GenAI
	implementation("com.google.genai:google-genai:1.0.0")
	// DTO 유효성 검사 (@NotBlank, @NotNull 등)
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// CoolSMS SDK
	implementation 'net.nurigo:sdk:4.2.7'
	// ModelMapper
	implementation 'org.modelmapper:modelmapper:3.2.0'
	// 바코드 생성
	implementation 'com.google.zxing:core:3.5.1'
	implementation 'com.google.zxing:javase:3.5.1'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty "spring.profiles.active", "test"
}
